Bug #31097  ALTER ONLINE of a data type with implicit default value leaves tmp frm: only remove frm file if file type is TMP_TABLE_FRM_FILE_ONLY