sql/sql_delete.cc
@@ -926,6 +926,8 @@ bool mysql_truncate(THD *thd, TABLE_LIST *table_list, bool dont_send_ok)
   {
     handlerton *table_type= table->s->db_type();
     TABLE_SHARE *share= table->s;
+    bool frm_only= (share->tmp_table == TMP_TABLE_FRM_FILE_ONLY);
+
     if (!ha_check_storage_engine_flag(table_type, HTON_CAN_RECREATE))
       goto trunc_by_del;
 
@@ -939,7 +941,7 @@ bool mysql_truncate(THD *thd, TABLE_LIST *table_list, bool dont_send_ok)
                                              share->db.str,
 					     share->table_name.str, 1,
                                              OTM_OPEN))))
-      (void) rm_temporary_table(table_type, path);
+      (void) rm_temporary_table(table_type, path, frm_only);
     free_table_share(share);
     my_free((char*) table,MYF(0));
     /*
